# Stock-Trading-Bot

./: .env.sample  Makefile  pyproject.toml
nbs/: 1.Hello-world.ipynb  10.LoadStockQuotes.ipynb  11.BatchAndBulkLoadStock.ipynb  2.Polygon.ipynb  2.TransformPolygon.ipynb  3.AlphaVantage.ipynb  5.TransformAlphaVantage.ipynb  6.PolygonAPIClient.ipynb  7.AlphaVantageAPIClient.ipynb  8.DjangoSetup.ipynb  9.HelperAPIClient.ipynb  setup.py
src/config/: settings.py
src/helpers/clients/: __init__.py  _alpha_vantage.py  _polygon.py
src/market/: models.py  tasks.py  utils.py
src/market/migrations/: 0001_initial.py  0002_alter_stockquote_managers.py  0003_rename_value_stockquote_volume.py  0004_alter_stockquote_unique_together.py
