[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Stock-Trading-Bot"
version = "0.1.0"
description = "A stock trading bot."
requires-python = ">=3.10"
dependencies = [
    "Django>=5.1,<5.2",
    "django-timescaledb",
    "jupyter",
    "requests",
    "psycopg[binary]",
    "python-decouple",
]
